--- a/2021-11-26_Tisza/tiszato.css
+++ b/2021-11-26_Tisza/tiszato.css
@@ -21,6 +21,7 @@ p{
 h2{
     padding: 75px 5px 20px;
     color: rgb(28, 36, 53);
+    font-weight: bold;
 }
 
 h1, h2, h3, h4 {
@@ -70,7 +71,8 @@ tbody{
 .madarkep{
     width: 100px;
     vertical-align: bottom;
-    cursor: pointer;
+    text-align: center;
+    /*cursor: pointer;*/
 }
 
 small {
